--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,54 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&family=Quicksand:wght@600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  -webkit-font-smoothing: antialiased !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+::-webkit-scrollbar {
+  width: 6px;
+  height: 11px;
+  background-color: #343b3c;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #a3a3a3;
+  border: 1px solid #a3a3a3;
+  border-radius: 8px;
+}
+
+@layer components {
+  .body-XXlarge {
+    @apply text-2xl md:text-5xl lg:text-7xl;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .body-Xlarge {
+    @apply text-xl md:text-4xl lg:text-6xl;
+  }
+
+  .body-large {
+    @apply text-base md:text-2xl lg:text-3xl;
+  }
+
+  .body-big {
+    @apply text-lg md:text-xl lg:text-2xl;
+  }
+
+  .body-medium {
+    @apply text-xs md:text-sm lg:text-base;
+  }
+
+  .body-small {
+    @apply text-xs md:text-sm lg:text-sm;
+  }
+
+  .body-Xsmall {
+    @apply text-xs md:text-base lg:text-xs;
+  }
+
+  .body-link {
+    @apply text-links hover:text-linkshover;
+  }
 }
