--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&family=Quicksand:wght@600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Kode+Mono:wght@400..700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -50,5 +51,9 @@
 
   .body-link {
     @apply text-links hover:text-linkshover;
+  }
+
+  .arrow-right{
+    perspective: 1000px;
   }
 }
