--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,14 @@
     @apply text-lg md:text-xl lg:text-2xl;
   }
 
+  .body-nav{
+    @apply text-base md:text-lg lg:text-xl;
+  }
+
+  .logo{
+    @apply text-lg md:text-2xl lg:text-4xl;
+  }
+
   .body-medium {
     @apply text-xs md:text-sm lg:text-base;
   }
