--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
 
 @layer components {
   .body-XXlarge {
-    @apply text-2xl md:text-5xl lg:text-7xl;
+    @apply text-3xl md:text-5xl lg:text-7xl;
   }
 
   .body-Xlarge {
@@ -34,15 +34,15 @@
   }
 
   .body-big {
-    @apply text-lg md:text-xl lg:text-2xl;
+    @apply text-xl md:text-xl lg:text-2xl;
   }
 
   .body-nav{
-    @apply text-base md:text-lg lg:text-xl;
+    @apply text-xs md:text-lg lg:text-xl;
   }
 
   .logo{
-    @apply text-lg md:text-2xl lg:text-4xl;
+    @apply text-xl md:text-2xl lg:text-4xl;
   }
 
   .body-medium {
