--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&family=Quicksand:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Kode+Mono:wght@400..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,15 +20,15 @@
   }
 
   .body-large {
-    @apply text-base md:text-2xl lg:text-3xl;
+    @apply text-xl md:text-2xl lg:text-3xl;
   }
 
   .body-big {
-    @apply text-xl md:text-xl lg:text-2xl;
+    @apply text-lg md:text-xl lg:text-2xl;
   }
 
   .body-nav {
-    @apply text-xs md:text-lg lg:text-2xl;
+    @apply text-sm md:text-base lg:text-lg;
   }
 
   .logo {
@@ -46,9 +47,6 @@
     @apply text-xs md:text-base lg:text-xs;
   }
 
-  .body-link {
-    @apply text-links hover:text-linkshover;
-  }
 
   .arrow-right {
     perspective: 1000px;
